# burst

./: .env.example  .gitignore  BTRFS_IOC_ENCODED_WRITE-findings.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  RELEASING.md  TESTING.md  downloader-plan.md  format-plan.md  implementation-plan.md  plan-ioc-requirements.txt  plan.txt  testing-strategy.md  worktree-create.sh
.github/workflows/: release.yaml  test.yaml
docs/: burst-downloader-guide.md  burst-format.md
include/: alignment.h  btrfs_writer.h  burst_downloader.h  burst_writer.h  cd_fetch.h  central_dir_parser.h  frame_parser.h  profiling.h  s3_client.h  stream_processor.h  zip_structures.h
src/downloader/: btrfs_writer.c  cd_fetch.c  central_dir_parser.c  frame_parser.c  main.c  parts_calculation.c  profiling.c  s3_client.c  s3_operations.c  stream_processor.c
src/writer/: alignment.c  burst_writer.c  compression.c  compression.h  entry_processor.c  entry_processor.h  main.c  zip_structures.c
tests/: CMakeLists.txt  cmock_config.yml
tests/fixtures/: small.txt
tests/fixtures/zip64_src/: test1.txt  test2.txt
tests/integration/: setup_s3.sh  test_alignment_integration.sh  test_central_dir_parser.c  test_directory_entries.sh  test_downloader_encoded_write.sh  test_downloader_phase1.sh  test_empty_file_alignment.sh  test_large_cd.sh  test_padding_lfh_extraction.c  test_writer_basic.sh  test_writer_unix_metadata.sh  test_zip_compatibility.sh  test_zstd_compression.sh  verify_alignment.py  verify_alignment.sh
tests/integration/e2e/: e2e_common.sh  setup_btrfs.sh  test_e2e_continuing.sh  test_e2e_many_files.sh  test_e2e_medium.sh  test_e2e_padding_lfh.sh  test_e2e_small.sh  test_e2e_unix_metadata.sh  test_e2e_zip64.sh
tests/integration/verify_alignment_tests/: README  create_test_archives.sh  test_verification_suite.sh  verify_alignment_test_results.md
tests/mocks/: btrfs_writer_mock.h  burst_writer_mock.h  compression_mock.h  zstd_mock.h
tests/unit/: test_alignment.c  test_cd_fetch.c  test_central_dir_parser.c  test_crc32.c  test_entry_processor.c  test_frame_parser.c  test_parts_calculation.c  test_stream_processor.c  test_writer_chunking.c  test_writer_core.c  test_writer_helpers.c  test_zip_structures.c  test_zstd_frames.c
